# patch-elf-symtab

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: nix-flake-check.yaml
nix/: add-packages-to-checks.nix  build.nix  patch-elf-symtab.nix  pkgs.nix  pre-commit.nix
src/: cli.rs  entries.rs  main.rs
testsuites/: build.nix
testsuites/fixtures/hello-world/: default.nix  main.c
testsuites/integration/: bad-patched-entries.json  build.nix  entries-unknown-key.json  entries.json  identity-entries.json
