[package]
name = "patch-elf-symtab"
version = "0.1.0"
edition = "2024"
description = "ELF symbol table patching utility"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
elf = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
